log/build_2024-12-18_15-49-02/rc/stderr.log
  File "/home/aimaim/rc_ws/install/rc/lib/python3.10/site-packages/rc/rc_control.py", line 4
    import rc_pwm_pkg.msg import PubPwm
                          ^^^^^^
SyntaxError: invalid syntax

